fix headers with Js, pbl charts#index array (total)

--- a/app/views/charts/index.html.erb
+++ b/app/views/charts/index.html.erb
@@ -35,33 +35,40 @@
 
           <!-- solution de secours à la place des totaux dans le graphique -->
           <h2 class="green-bg my-4">Récapitulatif</h2>
-          <div class="structur-array">
-            <table class="mt-4 fixed_headers">
-              <thead>
-                <tr class="text-center">
-                  <th> Structure</th>
-                  <th> Kg/collaborateur/jour</th>
-                  <th> Jours suivis </th>
-                  <th> Poids total </th>
-                </tr>
-              </thead>
-              <tbody>
-                <% @days_and_weight_per_company_per_person.each do |company|  %>
-                  <tr>
-                    <td><%= company[0] %></td>
-                    <td><%= (company[2] / company[1]).round(2) %></td>
-                    <td><%= company[1].to_i  %></td>
-                    <td><%= company[2].round %> Kg</td>
+
+          <div class="pane pane--table1 mt-4">
+            <div class="pane-hScroll">
+              <table class="table table-striped table-hover">
+                <thead>
+                  <tr class="text-center">
+                    <th> Structure</th>
+                    <th> Kg/collaborateur/jour</th>
+                    <th> Jours suivis </th>
+                    <th> Poids total </th>
                   </tr>
-                <% end %>
-                <tr>
-                  <td>Total</td>
-                  <td>-</td>
-                  <td>-</td>
-                  <td><%= @total_weight.round %> Kg</td>
-                </tr>
-              </tbody>
-            </table>
+                </thead>
+              </table>
+              <div class="pane-vScroll">
+                <table class="table table-striped table-hover">
+                  <tbody>
+                    <% @days_and_weight_per_company_per_person.each do |company|  %>
+                      <tr>
+                        <td><%= company[0] %></td>
+                        <td><%= (company[2] / company[1]).round(2) %></td>
+                        <td><%= company[1].to_i  %></td>
+                        <td><%= company[2].round %> Kg</td>
+                      </tr>
+                    <% end %>
+                    <tr>
+                      <td>Total</td>
+                      <td>-</td>
+                      <td>-</td>
+                      <td><%= @total_weight.round %> Kg</td>
+                    </tr>
+                  </tbody>
+                </table>
+              </div>
+            </div>
           </div>
 
            <% if @total_weight != 0 %>
@@ -74,8 +81,6 @@
           <% end %>
 
           <hr class="my-5">
-
-
           <div class="dropdown">
             <button class="btn btn-primary bold dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
               Structure
