--- a/app/stylesheets/components/_array.scss
+++ b/app/stylesheets/components/_array.scss
@@ -1,28 +1,42 @@
-
-.fixed_headers {
+table {
+  border-collapse: collapse;
+  background: white;
   table-layout: fixed;
   width: 100%;
-  th, td {
-    padding: 5px;
-    min-width: 200px;
-    max-width: 200px;
-    text-align: center;
-  }
-  thead {
-    text-align: center;
-    background-color: $secondary;
-    color: white;
-    tr {
-      display: block;
-    }
-  }
-  tbody {
-    overflow: auto;
-    display: block;
-    width: 100%;
-    height: 200px;
-    tr:nth-child(even) {
-      background-color: gray;
-    }
-  }
+}
+th, td {
+  padding: 8px 16px;
+  border: 1px solid #ddd;
+  width: 300px;
+  text-align: center;
+  // overflow: hidden;
+  // text-overflow: ellipsis;
+  // white-space: nowrap;
+}
+
+.pane {
+  background: #eee;
+}
+.pane-hScroll {
+  overflow: auto;
+  width: 100%;
+  background: $green;
+}
+.pane-vScroll {
+  overflow-y: auto;
+  overflow-x: hidden;
+  height: 200px;
+  background: white;
+}
+
+.pane-hScroll2 {
+  overflow: auto;
+  width: 100%;
+  background: $green;
+}
+.pane-vScroll2 {
+  overflow-y: auto;
+  overflow-x: hidden;
+  height: 200px;
+  background: white;
 }
