--- a/app/views/charts/_show.html.erb
+++ b/app/views/charts/_show.html.erb
@@ -12,29 +12,37 @@
 
 <h2 class="green-bg my-4">Total par type de déchets</h2>
 
-  <table class="mt-4 fixed_headers">
-    <thead>
-      <tr class="text-center">
-        <th> Type de déchet</th>
-        <th> Kg/collaborateur/jour</th>
-        <th> Jours suivis </th>
-        <th> Poids total </th>
-      </tr>
-    </thead>
-    <tbody>
-      <% @days_and_weight_per_type_per_person.each do |type|  %>
-        <tr>
-          <td><%= type[0] %></td>
-          <td><%= (type[2] / type[1]).round(2) %></td>
-          <td><%= type[1].to_i  %></td>
-          <td><%= type[2].round %> Kg</td>
+<div class="pane pane--table1 mt-4">
+  <div class="pane-hScroll">
+    <table class="table table-striped table-hover">
+      <thead>
+        <tr class="text-center">
+          <th> Type de déchet</th>
+          <th> Kg/collaborateur/jour</th>
+          <th> Jours suivis </th>
+          <th> Poids total </th>
         </tr>
-      <% end %>
-      <tr>
-        <td>Total</td>
-        <td>-</td>
-        <td>-</td>
-        <td><%= @total_weight_per_company.round %> Kg</td>
-      </tr>
-    </tbody>
-  </table>
+      </thead>
+    </table>
+    <div class="pane-vScroll">
+      <table class="table table-striped table-hover">
+        <tbody>
+          <% @days_and_weight_per_type_per_person.each do |type|  %>
+            <tr>
+              <td><%= type[0] %></td>
+              <td><%= (type[2] / type[1]).round(2) %></td>
+              <td><%= type[1].to_i  %></td>
+              <td><%= type[2].round %> Kg</td>
+            </tr>
+          <% end %>
+          <tr>
+            <td>Total</td>
+            <td>-</td>
+            <td>-</td>
+            <td><%= @total_weight_per_company.round %> Kg</td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
+  </div>
+</div>
