--- a/app/views/collects/index.html.erb
+++ b/app/views/collects/index.html.erb
@@ -42,54 +42,62 @@
             <%= link_to "Gérer les bacs", bins_path, class:"btn btn-outline-primary" %>
           </div>
         <% end %>
-        <table class="mt-4 fixed_headers">
-          <thead>
-            <tr class="text-center">
-              <% if current_user.admin %>
-                <th>Structure</th>
-              <% end %>
-              <th> Type de bacs</th>
-              <th> N° du bac</th>
-              <th> Début de période de relevée</th>
-              <th> Fin de période de relevée</th>
-              <th> Taux de remplissage</th>
-              <th>Poids du bac</th>
-              <th>Poids du bac (/collaborateur·rice/jour moyen</th>
-              <th>Commentaire</th>
-              <% if current_user.referent? %>
-                <th></th>
-                <th></th>
-              <% end %>
-            </tr>
-          </thead>
-            <tbody>
-              <% @collects.each do |collect| %>
+        <div class="pane pane--table1 mt-4">
+          <div class="pane-hScroll">
+            <table class="table table-striped table-hover">
+              <thead >
                 <tr>
                   <% if current_user.admin %>
-                    <td> <%= collect.bin.company.name %></td>
+                  <th><div class="fixed_table">Structure</div></th>
                   <% end %>
-                  <td><%= collect.bin.bin_type.name %></td>
-                  <td><%= collect.bin.id %></td>
-                  <td><%= collect.start_at.strftime("%d/%m/%y") %></td>
-                  <td><%= collect.end_at.strftime("%d/%m/%y") %></td>
-                  <td><%= collect.filled_rate %>%</td>
-                  <td><%= (collect.filled_rate / 100 * collect.bin.volume * collect.bin.bin_type.density).round %> Kg</td>
-                  <td><%= collect.weight_person_day.round(2) %> Kg </td>
-                  <td><%= collect.comment %></td>
+                  <th><div class="fixed_table">Type de bacs</div></th>
+                  <th><div class="fixed_table">N° du bac</div></th>
+                  <th><div class="fixed_table">Début de période de relevée</div></th>
+                  <th><div class="fixed_table">Fin de période de relevée</div></th>
+                  <th><div class="fixed_table">Taux de remplissage</div></th>
+                  <th><div class="fixed_table">Poids du bac</div></th>
+                  <th><div class="fixed_table">Poids du bac (/collaborateur·rice/jour moyen</div></th>
+                  <th><div class="fixed_table">Commentaire</div></th>
                   <% if current_user.referent? %>
+                  <th><div class="fixed_table"></div></th>
+                  <th><div class="fixed_table"></div></th>
+                  <% end %>
+                </tr>
+              </thead>
+            </table>
+            <div class="pane-vScroll">
+              <table class="table table-striped table-hover">
+                <tbody>
+                  <% @collects.each do |collect| %>
+                  <tr>
+                    <% if current_user.admin %>
+                    <td> <%= collect.bin.company.name %></td>
+                    <% end %>
+                    <td><%= collect.bin.bin_type.name %></td>
+                    <td><%= collect.bin.id %></td>
+                    <td><%= collect.start_at.strftime("%d/%m/%y") %></td>
+                    <td><%= collect.end_at.strftime("%d/%m/%y") %></td>
+                    <td><%= collect.filled_rate %>%</td>
+                    <td><%= (collect.filled_rate / 100 * collect.bin.volume * collect.bin.bin_type.density).round %> Kg</td>
+                    <td><%= collect.weight_person_day.round(2) %> Kg </td>
+                    <td><%= collect.comment %></td>
+                    <% if current_user.referent? %>
                     <td><%= link_to "Modifier", edit_collect_path(collect), class: "btn btn-primary" %></td>
                     <td>
                       <%= link_to "Supprimer", collect_path(collect),
-                                              method: :delete,
-                                              class: "btn btn-danger",
-                                              data: { confirm: "Êtes-vous sûr ?"}
+                      method: :delete,
+                      class: "btn btn-danger",
+                      data: { confirm: "Êtes-vous sûr ?"}
                       %>
-                  </td>
-                <% end %>
-              </tr>
-            <% end %>
-          </tbody>
-        </table>
+                    </td>
+                    <% end %>
+                  </tr>
+                  <% end %>
+                </tbody>
+              </table>
+            </div>
+          </div>
+        </div>
 
         <div id="referent"></div>
         <% if current_user.referent? %>
@@ -103,54 +111,61 @@
           <p class="mb-0 bold"><%= current_user.company.referent.user.telephone %></p>
           <p class="mb-0 bold"><%= current_user.company.referent.user.email %></p>
         <% end %>
-
-        <table class="mt-4 mb-5 fixed_headers">
-          <thead>
-            <tr class="text-center">
-              <% if current_user.admin? %>
-                <th>Structure</th>
-              <% end %>
-              <th>Prénom</th>
-              <th>NOM</th>
-              <th>Fonction</th>
-              <th>Téléphone</th>
-              <th>Email</th>
-              <% if current_user.referent? || current_user.admin? %>
-                <th>Nb de connexion</th>
-                <th>Dernière connexion</th>
-                <th>Supprimer</th>
-              <% end %>
-            </tr>
-          </thead>
-          <tbody>
-            <% @users.each do |user| %>
-              <tr>
-              <% if current_user.admin? %>
-                <td><%= user.company.name %></td>
-              <% end %>
-              <td><%= user.first_name.capitalize %></td>
-              <td><%= user.last_name.upcase %></td>
-              <td><%= user.role.capitalize %></td>
-              <td><%= user.telephone %></td>
-              <td><%= user.email %></td>
-              <% if current_user.referent? && user.current_sign_in_at.present? || current_user.admin? && user.current_sign_in_at.present?  %>
-                <td><%= user.sign_in_count %></td>
-                <td><%= user.current_sign_in_at.strftime("%d-%m-%Y") %></td>
-              <% elsif current_user.referent? %>
-                <td> - </td>
-                <td> - </td>
-              <% end %>
-              <% if current_user.referent? || current_user.admin? %>
-                <% if user.referent? || user.admin? %>
-                  <td> - </td>
-                <% else %>
-                  <td><%= link_to "Supprimer", user_path(user), method: :delete, class: "btn btn-danger" %></td>
-                <% end %>
-              <% end %>
-              </tr>
-            <% end %>
-          </tbody>
-        </table>
+        <div class="pane pane--table1 mt-4">
+          <div class="pane-hScroll2">
+            <table class="table table-striped table-hover">
+              <thead>
+                <tr>
+                  <% if current_user.admin? %>
+                    <th>Structure</th>
+                  <% end %>
+                  <th>Prénom</th>
+                  <th>NOM</th>
+                  <th>Fonction</th>
+                  <th>Téléphone</th>
+                  <th>Email</th>
+                  <% if current_user.referent? || current_user.admin? %>
+                    <th>Nb de connexion</th>
+                    <th>Dernière connexion</th>
+                    <th>Supprimer</th>
+                  <% end %>
+                </tr>
+              </thead>
+            </table>
+            <div class="pane-vScroll2">
+              <table class="table table-striped table-hover">
+                <tbody>
+                  <% @users.each do |user| %>
+                    <tr>
+                      <% if current_user.admin? %>
+                        <td><%= user.company.name %></td>
+                      <% end %>
+                      <td><%= user.first_name.capitalize %></td>
+                      <td><%= user.last_name.upcase %></td>
+                      <td><%= user.role.capitalize %></td>
+                      <td><%= user.telephone %></td>
+                      <td><%= user.email %></td>
+                      <% if current_user.referent? && user.current_sign_in_at.present? || current_user.admin? && user.current_sign_in_at.present?  %>
+                        <td><%= user.sign_in_count %></td>
+                        <td><%= user.current_sign_in_at.strftime("%d-%m-%Y") %></td>
+                      <% elsif current_user.referent? %>
+                        <td> - </td>
+                        <td> - </td>
+                      <% end %>
+                      <% if current_user.referent? || current_user.admin? %>
+                        <% if user.referent? || user.admin? %>
+                          <td> - </td>
+                        <% else %>
+                          <td><%= link_to "Supprimer", user_path(user), method: :delete, class: "btn btn-danger" %></td>
+                        <% end %>
+                      <% end %>
+                    </tr>
+                  <% end %>
+                </tbody>
+              </table>
+            </div>
+          </div>
+        </div>
 
       <div id="structure"></div>
       <h2 class="green-bg mt-5">Votre structure dans le Défi</h2>
