--- a/app/views/charts/index.html.erb
+++ b/app/views/charts/index.html.erb
@@ -38,18 +38,18 @@
 
           <div class="pane pane--table1 mt-4">
             <div class="pane-hScroll">
-              <table class="table table-striped table-hover">
+              <table class="table table-striped table-hover chart_array">
                 <thead>
                   <tr class="text-center">
                     <th> Structure</th>
-                    <th> Kg/collaborateur/jour</th>
+                    <th> Kg / collaborateur / jour</th>
                     <th> Jours suivis </th>
                     <th> Poids total </th>
                   </tr>
                 </thead>
               </table>
               <div class="pane-vScroll">
-                <table class="table table-striped table-hover">
+                <table class="table table-striped table-hover chart_array">
                   <tbody>
                     <% @days_and_weight_per_company_per_person.each do |company|  %>
                       <tr>
