--- a/app/stylesheets/components/_percentage.scss
+++ b/app/stylesheets/components/_percentage.scss
@@ -1,10 +1,11 @@
 .percente {
   padding: 5px 40px;
   color: white;
-
+  width: 150px;
   font-weight: bold;
   margin-right: 10px;
   font-size: 30px;
+  text-align: center;
 }
 
 .percente-blue {
