remove CCI logo, change redirection

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -81,7 +81,7 @@
       </div>
 
       <div class="col-12 col-sm-2 col-lg-2 text-center mb-4 d-flex align-items-center justify-content-center">
-        <%= link_to "http://www.bordeaux-metropole.fr/", target: :blank do %>
+        <%= link_to "https://www.nouvelle-aquitaine.fr/", target: :blank do %>
           <%= image_tag "region.png", height: 100 %>
         <% end %>
       </div>
@@ -89,11 +89,6 @@
       <div class="col-12 col-sm-2 col-lg-2 text-center mb-4 d-flex align-items-center justify-content-center">
         <%= link_to "https://leanature.com/", target: :blank do %>
           <%= image_tag "lea-nature.png", width: 100 %>
-        <% end %>
-      </div>
-      <div class="col-12 col-sm-2 col-lg-2 text-center mb-4 d-flex align-items-center justify-content-center">
-        <%= link_to "https://bordeauxgironde.cci.fr/", target: :blank do %>
-          <%= image_tag "CCI.png", width: 100 %>
         <% end %>
       </div>
     </div>
@@ -105,12 +100,12 @@
         <% end %>
       </div>
       <div class="col-12 col-sm-2 col-lg-2 text-center mb-4 pr-2 d-flex align-items-center justify-content-center">
-        <%= link_to "https://www.cebx.fr/", target: :blank do %>
+        <%= link_to "http://www.artisans-gironde.fr/", target: :blank do %>
           <%= image_tag "GMAI.png", height: 100 %>
         <% end %>
       </div>
       <div class="col-12 col-sm-2 col-lg-2 text-center mb-4 d-flex align-items-center justify-content-center">
-        <%= link_to "https://www.cebx.fr/", target: :blank do %>
+        <%= link_to "https://www.pole-ecoindustries.fr/", target: :blank do %>
           <%= image_tag "ecoindustries.png", width: 100 %>
         <% end %>
       </div>
@@ -128,7 +123,7 @@
       </div>
 
       <div class="col-12 col-sm-2 col-lg-2 text-center mb-4 d-flex align-items-center justify-content-center">
-        <%= link_to "https://www.cebx.fr/", target: :blank do %>
+        <%= link_to "https://www.gobilab.com/", target: :blank do %>
           <%= image_tag "GOBILAB.png", width: 100 %>
         <% end %>
       </div>
