--- a/app/views/pages/partenaires.html.erb
+++ b/app/views/pages/partenaires.html.erb
@@ -67,7 +67,7 @@
             <% end %>
           </div>
           <div class="col-12 col-sm-2 col-lg-2 text-center mb-4 d-flex align-items-center justify-content-center">
-            <%= link_to "http://www.bordeaux-metropole.fr/", target: :blank do %>
+            <%= link_to "https://www.nouvelle-aquitaine.fr/", target: :blank do %>
               <%= image_tag "region.png", height: 100 %>
             <% end %>
           </div>
@@ -84,23 +84,18 @@
           </div>
         </div>
         <div class="row d-flex text-align-center justify-content-center pb-5">
-          <div class="col-12 col-sm-4 col-lg-2 text-center mb-4 pr-2 d-flex align-items-center justify-content-center">
-            <%= link_to "https://bordeauxgironde.cci.fr/", target: :blank do %>
-              <%= image_tag "CCI.png", height: 100 %>
-            <% end %>
-          </div>
           <div class="col-12 col-sm-2 col-lg-2 text-center mb-4 pr-2 d-flex align-items-center justify-content-center">
             <%= link_to "https://www.cebx.fr/", target: :blank do %>
               <%= image_tag "club-entreprises.svg", height: 100 %>
             <% end %>
           </div>
           <div class="col-12 col-sm-2 col-lg-2 text-center mb-4 pr-2 d-flex align-items-center justify-content-center">
-            <%= link_to "https://www.cebx.fr/", target: :blank do %>
+            <%= link_to "http://www.artisans-gironde.fr/", target: :blank do %>
               <%= image_tag "GMAI.png", height: 100 %>
             <% end %>
           </div>
           <div class="col-12 col-sm-2 col-lg-2 text-center mb-4 d-flex align-items-center justify-content-center">
-            <%= link_to "https://www.cebx.fr/", target: :blank do %>
+            <%= link_to "https://www.pole-ecoindustries.fr/", target: :blank do %>
             <%= image_tag "ecoindustries.png", width: 100 %>
             <% end %>
           </div>
@@ -115,7 +110,7 @@
             <% end %>
           </div>
           <div class="col-12 col-sm-2 col-lg-2 text-center mb-4 d-flex align-items-center justify-content-center">
-            <%= link_to "https://www.cebx.fr/", target: :blank do %>
+            <%= link_to "https://www.gobilab.com/", target: :blank do %>
               <%= image_tag "GOBILAB.png", width: 100 %>
             <% end %>
           </div>
