change and add popup on delete

--- a/app/views/bins/index.html.erb
+++ b/app/views/bins/index.html.erb
@@ -55,7 +55,7 @@
                       <%= link_to "Supprimer", bin_path(bin),
                                               method: :delete,
                                               class: "btn btn-danger",
-                                              data: { confirm: "Êtes-vous sûr ?"}
+                                              data: { confirm: "Êtes-vous sûr de vouloir supprimer ce bac ?"}
                       %>
                     </td>
                   </tr>
