change url for facebook link

--- a/app/views/pages/plan.html.erb
+++ b/app/views/pages/plan.html.erb
@@ -24,7 +24,7 @@
         <% end %>
       </li>
       <li>
-        <%= link_to "https://www.facebook.com/ekologeek/",class:"footer-link mx-3", target:"_blank" do %>
+        <%= link_to "https://www.facebook.com/DefiZeroDechetdesPros/",class:"footer-link mx-3", target:"_blank" do %>
           <%= inline_svg "facebook.svg", width:"30" %>
         <% end %>
       </li>
