--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -29,7 +29,7 @@
         <%= link_to "https://www.instagram.com/ekologeek/", class:"footer-link mx-3", target:"_blank" do %>
           <%= inline_svg "instagram.svg", width:"30" %>
         <% end %>
-        <%= link_to "https://www.facebook.com/ekologeek/",class:"footer-link mx-3", target:"_blank" do %>
+        <%= link_to "https://www.facebook.com/DefiZeroDechetdesPros/",class:"footer-link mx-3", target:"_blank" do %>
           <%= inline_svg "facebook.svg", width:"30" %>
         <% end %>
         <%= link_to "https://www.youtube.com/user/ekologeek/",class:"footer-link mx-3", target:"_blank" do %>
