--- a/app/views/collects/index.html.erb
+++ b/app/views/collects/index.html.erb
@@ -6,21 +6,19 @@
       <h2 class="green-bg mt-5">Diagnostics</h2>
 
       <p class='mb-0 mt-4'>Les diagnostics doivent nécessairement être réalisés avant le 10 février 2019. Au-delà de cette date, ils ne seront plus modifiables.</p>
-
-      <p>Cliquez sur les boutons ci-dessous pour accéder aux pages de diagnostics :</p>
       <div id="dechets"></div>
       <div class="text-center">
-        <% if current_user.referent? && current_user.company.trash_diagnostic.nil? %>
+        <% if current_user.referent? && current_user.company.trash_diagnostic.nil? || current_user.admin %>
           <p> <%= link_to "Diagnostic technique Structure", new_trash_diagnostic_path, class:"btn btn-primary bold" %></p>
         <% end %>
-        <% if current_user.referent? && current_user.company.company_behaviours.empty? %>
+        <% if current_user.referent? && current_user.company.company_behaviours.empty? || current_user.admin  %>
           <%= link_to "Diagnostic comportemental Structure", new_company_behaviour_diag_path, class:"btn btn-primary bold" %>
         <% elsif current_user.referent? && Date.today < "15/02/2019".to_date %>
           <%= link_to "Diagnostic comportemental Structure", company_behaviour_diag_path(:step_one), class:"btn btn-primary bold" %>
         <% end %>
 
-        <% if !current_user.company.trash_diagnostic.nil? %>
-          <% if current_user.user_behaviour_diag.nil? %>
+        <% if !current_user.company.trash_diagnostic.nil? || current_user.admin %>
+          <% if current_user.user_behaviour_diag.nil? || current_user.admin %>
             <%= link_to "Diagnostic comportemental Collaborateur·rice", new_comportamental_formulaire_path, class:"btn btn-primary bold" %>
           <% elsif Date.today < "15/02/2019".to_date %>
             <%= link_to "Diagnostic comportemental Collaborateur·rice", comportamental_formulaire_path(:page_one), class:"btn btn-primary bold" %>
