--- a/app/views/collects/index.html.erb
+++ b/app/views/collects/index.html.erb
@@ -17,10 +17,11 @@
           <%= link_to "Diagnostic comportemental Structure", company_behaviour_diag_path(:step_one), class:"btn btn-primary bold" %>
         <% end %>
 
-        <% if !current_user.company.trash_diagnostic.nil? || current_user.admin %>
-          <% if current_user.user_behaviour_diag.nil? || current_user.admin %>
+        <% if !current_user.company.trash_diagnostic.nil? %>
+
+          <% if current_user.user_behaviour_diag.nil?  %>
             <%= link_to "Diagnostic comportemental Collaborateur·rice", new_comportamental_formulaire_path, class:"btn btn-primary bold" %>
-          <% elsif Date.today < "15/02/2019".to_date %>
+          <% elsif Date.today < "15/02/2019".to_date || current_user.admin %>
             <%= link_to "Diagnostic comportemental Collaborateur·rice", comportamental_formulaire_path(:page_one), class:"btn btn-primary bold" %>
           <% end %>
 
@@ -157,7 +158,7 @@
                           <td><%= link_to "Supprimer", user_path(user),
                             method: :delete,
                             class: "btn btn-danger",
-                            data: { confirm: "Êtes-vous sûr de vouloir supprimer ce collaborateur ?"} %></td>
+                            data: { confirm: "Êtes-vous sûr de vouloir supprimer #{user.first_name } #{user.last_name} ?"} %></td>
                         <% end %>
                       <% end %>
                     </tr>
