--- a/app/views/collects/index.html.erb
+++ b/app/views/collects/index.html.erb
@@ -8,7 +8,7 @@
       <p class='mb-0 mt-4'>Les diagnostics doivent nécessairement être réalisés avant le 10 février 2019. Au-delà de cette date, ils ne seront plus modifiables.</p>
       <div id="dechets"></div>
       <div class="text-center">
-        <% if current_user.referent? && current_user.company.trash_diagnostic.nil? || current_user.admin %>
+        <% if current_user.referent? && current_user.company.trash_diagnostic.nil? %>
           <p> <%= link_to "Diagnostic technique Structure", new_trash_diagnostic_path, class:"btn btn-primary bold" %></p>
         <% end %>
         <% if current_user.referent? && current_user.company.company_behaviours.empty? || current_user.admin  %>
