add link fb in home page

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -51,6 +51,16 @@
     </div>
 
     <hr/>
+    <div class="d-flex justify-content-center align-items-center mt-5">
+      <p class=" mb-0">Inscrivez-vous sur notre page facebook :</p>
+      <div class="facebook">
+        <%= link_to "https://www.facebook.com/DefiZeroDechetdesPros/",class:"footer-link mx-3", target:"_blank" do %>
+        <%= inline_svg "facebook.svg", width:"20" %>
+        <% end %>
+      </div>
+    </div>
+    <div class="text-center mt-5"><strong>ou</strong></div>
+
 
     <div class="newsletter">
       <%= render "newsletter"  %>
