added edit comment

--- a/app/views/pages/plan.html.erb
+++ b/app/views/pages/plan.html.erb
@@ -6,7 +6,7 @@
       <h5 class="mt-4 green-bg">Site</h5>
       <li><%= link_to "Accueil", root_path %></li>
       <li><%= link_to "Pourquoi", pourquoi_path %></li>
-      <li><%= link_to "Comment", comment_path %></li>
+      <li><%= link_to "Comment", how_path %></li>
       <li><%= link_to "Inscription", inscription_path %></li>
       <li><%= link_to "Soutenir", soutenir_path %></li>
       <li><%= link_to "Qui sommes-nous", partenaires_path %></li>
