--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -43,12 +43,12 @@
           </a>
 
           <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-            <%= link_to "Objectifs du Défi Zéro Déchet des pros", comment_path(anchor: "comment1"), class:"anchor dropdown-item text-primary"%>
-            <%= link_to "Les déchets concernés", comment_path(anchor: "comment2"), class:"anchor dropdown-item text-primary" %>
-            <%= link_to "Les structures éligibles", comment_path(anchor: "comment2"), class:"anchor dropdown-item text-primary" %>
-            <%= link_to "Comment ça se passe ?", comment_path(anchor: "comment4"), class:"anchor dropdown-item text-primary" %>
-            <%= link_to "Planning", comment_path(anchor: "comment5"), class:"anchor dropdown-item text-primary" %>
-            <%= link_to "Combien ça coûte ?", comment_path(anchor: "comment6"), class:"anchor dropdown-item text-primary" %>
+            <%= link_to "Objectifs du Défi Zéro Déchet des pros", how_path(anchor: "comment1"), class:"anchor dropdown-item text-primary"%>
+            <%= link_to "Les déchets concernés", how_path(anchor: "comment2"), class:"anchor dropdown-item text-primary" %>
+            <%= link_to "Les structures éligibles", how_path(anchor: "comment2"), class:"anchor dropdown-item text-primary" %>
+            <%= link_to "Comment ça se passe ?", how_path(anchor: "comment4"), class:"anchor dropdown-item text-primary" %>
+            <%= link_to "Planning", how_path(anchor: "comment5"), class:"anchor dropdown-item text-primary" %>
+            <%= link_to "Combien ça coûte ?", how_path(anchor: "comment6"), class:"anchor dropdown-item text-primary" %>
           </div>
 
         <% else %>
@@ -57,12 +57,12 @@
           </a>
 
           <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-            <%= link_to "Objectifs du Défi Zéro Déchet des pros", comment_path(anchor: "comment1"), class:"anchor dropdown-item text-primary"%>
-            <%= link_to "Les déchets concernés", comment_path(anchor: "comment2"), class:"anchor dropdown-item text-primary" %>
-            <%= link_to "Les structures éligibles", comment_path(anchor: "comment2"), class:"anchor dropdown-item text-primary" %>
-            <%= link_to "Comment ça se passe ?", comment_path(anchor: "comment4"), class:"anchor dropdown-item text-primary" %>
-            <%= link_to "Planning", comment_path(anchor: "comment5"), class:"anchor dropdown-item text-primary" %>
-            <%= link_to "Combien ça coûte ?", comment_path(anchor: "comment6"), class:"anchor dropdown-item text-primary" %>
+            <%= link_to "Objectifs du Défi Zéro Déchet des pros", how_path(anchor: "comment1"), class:"anchor dropdown-item text-primary"%>
+            <%= link_to "Les déchets concernés", how_path(anchor: "comment2"), class:"anchor dropdown-item text-primary" %>
+            <%= link_to "Les structures éligibles", how_path(anchor: "comment2"), class:"anchor dropdown-item text-primary" %>
+            <%= link_to "Comment ça se passe ?", how_path(anchor: "comment4"), class:"anchor dropdown-item text-primary" %>
+            <%= link_to "Planning", how_path(anchor: "comment5"), class:"anchor dropdown-item text-primary" %>
+            <%= link_to "Combien ça coûte ?", how_path(anchor: "comment6"), class:"anchor dropdown-item text-primary" %>
           </div>
         <% end %>
 
