--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,5 +1,6 @@
 <%= @article.author %>
 <%= @article.title %>
+<%= @article.content.html_safe %>
 
 <div class="like-action">
   <% if @article.user_ids.include?(current_user.id) %>
