--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -1,6 +1,11 @@
-<%= simple_form_for article do |f| %>
-  <%= f.input :title %>
-  <%= f.input :author %>
-  <%= f.input :content, as: :trix_editor %>
-  <%= f.submit %>
-<% end %>
+<div class="container mt-5">
+  <%= simple_form_for article do |f| %>
+    <%= f.input :author %>
+    <%= f.input :title %>
+    <%= f.input :subtitle %>
+    <%= f.input :visibility, collection: ["Interne", "Externe", "Les 2"] %>
+    <%= f.input :content, as: :trix_editor %>
+    <%= f.submit %>
+  <% end %>
+</div>
+
