--- a/app/views/articles/_preview.html.erb
+++ b/app/views/articles/_preview.html.erb
@@ -1,6 +1,23 @@
-<% articles.each do |article| %>
-  <%= link_to article_path(article) do %>
-    <%= article.author %>
-    <%= article.title %>
+<div class="row mt-3 row-eq-height">
+
+  <% articles.each do |article| %>
+    <div class="col-12 col-sm-6 article">
+      <%= link_to article_path(article) do %>
+        <div class="card mb-3 h-100">
+          <%= image_tag "sendgrid.png", class: "card-img-top" %>
+          <div class="card-body">
+            <h5 class="card-title text-center mb-1"><%= article.title %></h5>
+            <p class="card-text text-center"><small class="text-muted">par <%= article.author.titleize %></small></p>
+            <p class="card-text"><%= article.subtitle %></p>
+            <div class="counts">
+              <p class="mx-3 text-muted"><%= pluralize(article.comments.count, "commentaire", "commentaires") %></p>
+              <p class="text-muted"><%= pluralize(article.likes.count, "like", "likes") %> </p>
+            </div>
+          </div>
+        </div>
+      <% end %>
+    </div>
+
   <% end %>
-<% end %>
+</div>
+
