--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -4,6 +4,7 @@
     <%= f.input :title %>
     <%= f.input :subtitle %>
     <%= f.input :visibility, collection: ["Interne", "Externe", "Les 2"] %>
+    <%= f.input :tag_list %>
     <%= f.input :content, as: :trix_editor %>
     <%= f.submit %>
   <% end %>
