--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,6 +1,7 @@
 <div class="wrapper">
   <div class="container mt-5">
     <%= link_to "Créer un article", new_article_path, class:"btn btn-primary" %>
+    <%= render "tag", tags: @tags %>
     <%= render "preview", articles: @articles %>
 
   </div>
