--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -12,7 +12,7 @@
     <div class="structure  m-1">
       <p class="field"><strong>Nom de l'entreprise :</strong> <em><%= @user.company.name %></em></p>
     </div>
-    <h3 class="my-3">Référent·e</h3>
+    <h3 class="my-3">Profil</h3>
     <div class="row">
       <div class="col-12 col-md-3 m-1">
         <p class="field"><strong>Civilité :</strong> <em><%= @user.civility %></em></p>
