--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -3,7 +3,12 @@
     <div class="container-ekologeek bg-white my-5 px-5 py-2">
       <div class="banner" style="background-image: url('<%= image_path "economie.jpg" %>');"></div>
       <div class="d-flex justify-content-end">
-        <% if current_user.admin? %>
+        <% if current_user && current_user.admin? %>
+          <% if @article.published? %>
+            <%=  link_to "Dépublier", unpublish_article_path(@article), method: :post, class:"btn btn-danger" %>
+          <% else %>
+            <%=  link_to "Publier", publish_article_path(@article), method: :post, class:"btn btn-primary" %>
+          <% end %>
           <%= link_to "Modifier", edit_article_path(@article), class: "cool-link mx-3" %>
           <%= link_to "Supprimer", article_path(@article), method: :delete, class: "cool-link" %>
         <% end %>
@@ -32,16 +37,18 @@
               <% end %>
             </div>
           </div>
-          <div class="d-flex align-items-center mr-3" >
-            <p class="mb-0 mx-3">N'oublier de liker cet article s'il vous a plus</p>
-            <div class="like-action">
-              <% if @article.user_ids.include?(current_user.id) %>
-              <%= render "likes/destroy" %>
-              <% else %>
-              <%= render "likes/create", article: @article %>
-              <% end %>
+          <% if current_user %>
+            <div class="d-flex align-items-center mr-3" >
+              <p class="mb-0 mx-3">N'oublier de liker cet article s'il vous a plus</p>
+              <div class="like-action">
+                <% if @article.user_ids.include?(current_user.id) %>
+                  <%= render "likes/destroy" %>
+                <% else %>
+                  <%= render "likes/create", article: @article %>
+                <% end %>
+              </div>
             </div>
-          </div>
+          <% end %>
         </div>
         <h4 class="green-bg my-5">Commentaires</h4>
         <div id="comments">
