--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -3,6 +3,8 @@
     <h2 class="mt-5 pt-5 text-center">Ekolo[geek] lance le <b>1er Défi Zéro Déchet des pros !</b></h2>
     <h2 class="mb-5 text-center"><b>Objectif :</b> réduire vos déchets de fonctionnement de 10%</h2>
 
+    <%= render "articles/preview", articles: @articles %>
+
     <div class="row">
       <div class="col-12 col-sm-4 mb-4">
         <%= link_to "pourquoi", class:"text-decoration-none" do %>
