--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -3,10 +3,9 @@
     <%= f.input :author %>
     <%= f.input :title %>
     <%= f.input :subtitle %>
-    <%= f.input :visibility, collection: ["Interne", "Externe", "Les 2"] %>
+    <%= f.input :visibility, collection: [[ "intern", "Interne"], [ "extern", "Externe"], [ "both", "Les 2"]], label_method: :second, value_method: :first %>
     <%= f.input :tag_list %>
     <%= f.input :content, as: :trix_editor %>
     <%= f.submit %>
   <% end %>
 </div>
-
