--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,6 +1,9 @@
 <div class="wrapper">
   <div class="container">
     <div class="container-ekologeek bg-white my-5 px-5 py-2">
+
+      <%= link_to "retour", root_path, class: "btn btn-outline-primary" %>
+
       <div class="banner" style="background-image: url('<%= image_path "economie.jpg" %>');"></div>
       <div class="d-flex justify-content-end">
         <% if current_user && current_user.admin? %>
