modifs reseaux sociaux

--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -40,6 +40,7 @@
               <% end %>
             </div>
           </div>
+          <%= social_share_button_tag(@article.title) %>
           <% if current_user %>
             <div class="d-flex align-items-center mr-3" >
               <p class="mb-0 mx-3">N'oublier de liker cet article s'il vous a plus</p>
