--- a/app/stylesheets/components/_article-cards.scss
+++ b/app/stylesheets/components/_article-cards.scss
@@ -4,11 +4,13 @@
   }
 
   .counts {
-    display: flex;
     position: absolute;
     bottom: 10px;
     right: 20px;
     font-size: 12px;
+    p {
+      margin: 0;
+    }
   }
 
   .card-infos {
@@ -21,6 +23,9 @@
     height: 250px;
     width: 100%;
     object-fit: cover;
+  }
+  .card-text {
+    margin-bottom: 30px;
   }
 
   a {
