--- a/app/views/charts/index.html.erb
+++ b/app/views/charts/index.html.erb
@@ -7,31 +7,21 @@
   <div class="container bg-white mb-5 pb-5">
     <div class="container-soutenir">
       <h1 class="header text-primary pt-5 text-center">TABLEAU DE BORD</h1>
-
-      <%= render "articles/preview", articles: @articles %>
-      <%= link_to "Voir tous les articles", articles_path %>
-
       <h2 class="green-bg my-4">Production de déchets de fonctionnement</h2>
-
-
       <!-- possibilité de saisir un relevé si on est référent mais pas admin -->
       <% if current_user.referent? && current_user.company.trash_diagnostic.nil? %>
         <p>Vous devez réaliser le  <%= link_to "diagnostic de votre structure", new_trash_diagnostic_path %> pour pouvoir afficher un graphique.</p>
       <% end %>
 
-
       <% if !current_user.company.trash_diagnostic.nil? %>
-
         <% if current_user.referent? && !current_user.admin%>
           <div class="text-center mb-4">
             <%= link_to "Saisir un relevé", new_collect_path, class:"btn btn-primary bold" %>
           </div>
         <% end %>
-
         <% if current_user.company.bins.empty? %>
           <b><p class="text-center mt-5">Il n'y a pas encore d'élément pour afficher le graphique</p></b>
         <% end %>
-
         <!-- graph reprenant tout seulement pour les admin-->
         <% if current_user.admin %>
           <h4 class="text-center bold">TOUTES LES STRUCTURES</h4>
@@ -102,20 +92,22 @@
               <% end %>
             </div>
           </div>
-
-
         <% end %>
-
         <!-- Ici s'affiche le graphique par entreprise, les données sont récupérées via data-series -->
         <% if !current_user.collects.empty? %>
           <div id="values"></div>
         <% end %>
       <% end %>
+      <div>
+        <h2 class="green-bg my-4">Actu</h2>
+      </div>
+      <%= link_to "Plus d'actu ", articles_path, class:"btn btn-primary" %>
+      <div>
+        <%= render "articles/preview", articles: @articles %>
+      </div>
     </div>
   </div>
 </div>
-
-
 
 <script type="module">
   document.addEventListener("DOMContentLoaded", function(event) {
