--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -3,8 +3,6 @@
     <h2 class="mt-5 pt-5 text-center">Ekolo[geek] lance le <b>1er Défi Zéro Déchet des pros !</b></h2>
     <h2 class="mb-5 text-center"><b>Objectif :</b> réduire vos déchets de fonctionnement de 10%</h2>
 
-    <%= render "articles/preview", articles: @articles %>
-
     <div class="row">
       <div class="col-12 col-sm-4 mb-4">
         <%= link_to "pourquoi", class:"text-decoration-none" do %>
@@ -71,6 +69,14 @@
     </div>
 
     <hr/>
+    <div>
+
+      <h2 class="green-bg my-4">Actu</h2>
+    </div>
+    <%= link_to "Plus d'actu ", articles_path, class:"btn btn-primary" %>
+    <div>
+      <%= render "articles/preview", articles: @articles %>
+    </div>
 
     <h2 class="my-5 header text-primary text-center">PARTENAIRES</h2>
     <div class="row d-flex text-align-center justify-content-center">
