add i18n and styl to new_article form, add bg-white for collects#index

--- a/app/views/collects/index.html.erb
+++ b/app/views/collects/index.html.erb
@@ -1,5 +1,5 @@
 <div class="wrapper">
-  <div class="container">
+  <div class="container bg-white">
     <div class="container-soutenir">
       <div id="diagnostic"></div>
       <h1 class="header text-primary pt-5 text-center">DONNÉES</h1>
