--- a/app/views/shared/_navbar_connected.html.erb
+++ b/app/views/shared/_navbar_connected.html.erb
@@ -42,6 +42,9 @@
           </div>
         <% end %>
       </li>
+      <li class="nav-item m-3 bold-link">
+        <%= link_to "BLOG", "/topics", class:"nav-link text-light-gray" %>
+      </li>
 
       <li class="nav-item m-3 bold-link">
         <%= link_to  "Contact", contact_path, class:"nav-link text-light-gray pl-lg-3 position borderus pl-lg-5"%>
