--- a/app/views/topics/_preview.html.erb
+++ b/app/views/topics/_preview.html.erb
@@ -1,7 +1,17 @@
 <% topics.each do |topic| %>
   <%= link_to topic_path(topic) do %>
-    <%= topic.content %>
+    <div class="card w-100 m-2">
+      <div class="card-body">
+        <div class="d-md-flex d-flex-column justify-content-between align-items-center">
+          <p class="card-text"><%= topic.content %></p>
+          <% if topic.mine?(current_user) %>
+            <div class="topic-links">
+              <%= link_to "Modifier", edit_topic_path(topic), class:"btn cool-link" %>
+              <%= link_to "Supprimer", topic_path(topic), method: :delete, class:"btn cool-link" %>
+            </div>
+          <% end %>
+        </div>
+      </div>
+    </div>
   <% end %>
 <% end %>
-
-
