--- a/app/views/topics/index.html.erb
+++ b/app/views/topics/index.html.erb
@@ -11,6 +11,7 @@
       </div>
       <div>
         <%= render "preview", topics: @topics %>
+        <%== pagy_bootstrap_nav(@pagy).html_safe %>
       </div>
     </div>
   </div>
