--- a/app/views/shared/_navbar_connected.html.erb
+++ b/app/views/shared/_navbar_connected.html.erb
@@ -43,7 +43,7 @@
         <% end %>
       </li>
       <li class="nav-item m-3 bold-link">
-        <%= link_to "BLOG", "/topics", class:"nav-link text-light-gray" %>
+        <%= link_to "FORUM", "/topics", class:"nav-link text-light-gray" %>
       </li>
 
       <li class="nav-item m-3 bold-link">
