--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,9 +1,12 @@
-<div class="wrapper">
+
+<% unless user_signed_in? %>
+  <div class="wrapper down">
+<% else %>
+  <div class="wrapper">
+<% end %>
   <div class="container">
     <div class="container-ekologeek bg-white my-5 px-5 py-2">
-
       <%= link_to "retour", articles_path, class: "btn btn-outline-primary" %>
-
       <div class="banner" style="background-image: url('<%= cl_image_path @article.cover, height: 300, width: 400, crop: :fill %>');"></div>
       <div class="d-flex justify-content-end">
         <% if current_user && current_user.admin? %>
