--- a/app/views/shared/_navbar_connected.html.erb
+++ b/app/views/shared/_navbar_connected.html.erb
@@ -11,7 +11,7 @@
   <div class="collapse navbar-collapse justify-content-center" id="navbarNavDropdown">
     <ul class="navbar-nav">
       <li class="nav-item">
-        <%= link_to charts_path, class:"navbar-brand home-nav-link ml-3 m-lg-none" do %>
+        <%= link_to root_path, class:"navbar-brand home-nav-link ml-3 m-lg-none" do %>
           <%= inline_svg "Accueil.svg", width: 20, class:"home" %>
         <% end %>
       </li>
