suppression des tags

--- a/app/views/articles/_tag.html.erb
+++ b/app/views/articles/_tag.html.erb
@@ -4,4 +4,5 @@
       <%= link_to tag, articles_path(tag: tag), class:"tag" %>
     </li>
   <% end %>
+  <%= link_to "Supprimer les tags", articles_path, class:"tag" %>
 </ul>
