--- a/app/views/topics/_form.html.erb
+++ b/app/views/topics/_form.html.erb
@@ -4,6 +4,8 @@
       <h2 class="mt-5 mb-4 green-bg">Créer un sujet</h2>
       <%= link_to "Retour", topics_path, class:"btn btn-link" %>
       <%= simple_form_for topic do |f| %>
+        <%= f.input :cover %>
+        <%= f.input :cover_cache, as: :hidden %>
         <%= f.input :content %>
         <%= f.submit "Créer un sujet" %>
       <% end %>
