--- a/app/views/shared/_navbar_connected.html.erb
+++ b/app/views/shared/_navbar_connected.html.erb
@@ -50,8 +50,8 @@
         <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
           <%= link_to "Actualités", articles_path, class:"anchor dropdown-item text-primary"%>
           <%= link_to "Forum", topics_path, class:"anchor dropdown-item text-primary"%>
-          <%= link_to "Agenda", donnees_path(anchor: "structure"), class:"anchor dropdown-item text-primary"%>
-          <%= link_to "Documents", donnees_path(anchor: "referent"), class:"anchor dropdown-item text-primary"%>
+          <%= link_to "Agenda", "/agenda", class:"anchor dropdown-item text-primary"%>
+          <%= link_to "Documents", "/documents", class:"anchor dropdown-item text-primary"%>
         </div>
       </li>
 
