--- a/app/views/answers/_form.html.erb
+++ b/app/views/answers/_form.html.erb
@@ -1,6 +1,6 @@
  <div class="form-comment mx-sm-5">
   <%= simple_form_for([ topic, answer ], remote: true) do |f| %>
-  <%= f.input :content %>
-  <%= f.submit %>
+  <%= f.input :content, label: "Réponse" %>
+  <%= f.submit "Répondre" %>
   <% end %>
 </div>
