--- a/app/views/layouts/charts.html.erb
+++ b/app/views/layouts/charts.html.erb
@@ -15,6 +15,7 @@
     <meta property="og:title" content="Défi Zéro Déchet des Pros 2018 Bordeaux Métropole">
     <meta property="og:image" content="comportemental.jpg">
     <meta property="og:description" content="Ekolo[geek] propose un accompagnement sur 6 mois et des ateliers pratiques aux entreprises de la métropole pour diminuer leurs déchets de fonctionnement, les inscriptions sont ouvertes">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
     <meta property="og:site_name" content="Défi Zéro Déchet des Pros"/>
     <%= csrf_meta_tags %>
     <%= action_cable_meta_tag %>
