--- a/app/views/articles/_preview.html.erb
+++ b/app/views/articles/_preview.html.erb
@@ -1,17 +1,17 @@
-<div class="row row-eq-height">
+<div>
   <% articles.each do |article| %>
-    <div class="col-12 col-sm-6 col-lg-4  article">
+    <div class="article">
       <%= link_to article_path(article) do %>
         <div class="card mb-3 h-100">
-          <%= cl_image_tag article.cover, height: 300, width: 400, crop: :fill, class: "card-img-top" %>
-          <div class="card-body">
-            <h5 class="card-title text-center mb-1"><%= article.title %></h5>
-            <p class="card-text text-center"><small class="text-muted">par <%= article.author.titleize %></small></p>
-            <p class="card-text"><%= article.subtitle.truncate_words(15, omission: '...') %></p>
-            <div class="counts d-flex justify-content-between align-items-center my-3">
-              <%= link_to "voir plus", article_path(article), class:"btn btn-link m" %>
-              <p class="mx-3 text-muted"><%= pluralize(article.comments.count, "commentaire", "commentaires") %></p>
-              <p class="text-muted"><%= pluralize(article.likes.count, "like", "likes") %> </p>
+          <div class="card-body pt-2 py-2">
+            <h4 class="card-title mb-1"><%= article.title %></h4>
+            <em class="card-text text-muted mb-2"><%= article.subtitle.truncate_words(15, omission: '...') %></em>
+            <div class="counts d-flex justify-content-between align-items-center">
+              <%= link_to "voir plus", article_path(article), class:"btn btn-link" %>
+              <div class="d-flex align-items-center">
+                <p class="mx-3 text-muted"><%= pluralize(article.comments.count, "commentaire", "commentaires") %></p>
+                <%= article.likes.count%><i class="fas fa-heart red ml-2"></i>
+              </div>
             </div>
           </div>
         </div>
