--- a/app/views/articles/new.html.erb
+++ b/app/views/articles/new.html.erb
@@ -1,7 +1,7 @@
 <div class="wrapper">
   <div class="container bg-white">
     <div class="container-ekologeek  my-5 px-5 py-2">
-      <h2 class="green-bg my-4" >Publier un article</h2>
+      <h2 class="green-bg my-4" >Créer un article</h2>
       <%= render "form", article: @article %>
     </div>
   </div>
