--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -5,7 +5,7 @@
       <%= link_to "Retour", root_path, class:"btn btn-link" %>
     </div>
     <%= render "tag", tags: @tags %>
-    <%= render 'preview', articles: @articles %>
+    <%= render 'articles', articles: @articles %>
     <%== pagy_bootstrap_nav(@pagy).html_safe %>
   </div>
 </div>
